# a-live-grid

./: .gitignore  FIREBASE_SETUP_GUIDE.md  Image_Url's.txt  PRD.txt  app.yaml  categories.yaml  pyproject.toml  requirements.txt  ruff.toml  run.py  test_agent.py
.roo/rules/: 01-agent-rules.md  rules.md
app/agent/: agent.py  prompt.py  state.py  tools.py
app/backend/: __init__.py  backend.py
app/backend/core/: config.py  firebase_auth.py  firestore.py  security.py
app/backend/routers/: __init__.py  posts.py  users.py
app/backend/schemas/: __init__.py  post.py  user.py
app/backend/services/: data_service.py  ranking.py  storage_service.py
app/data/: sample_data.json
backend/: README.md  SETUP_WINDOWS.md  env.example  install_deps.py  minimal_requirements.txt  quick_test.py  requirements.txt  test_app.py
backend/app/: main.py
backend/app/core/: config.py  security.py
backend/app/routers/: __init__.py  posts.py
backend/app/schemas/: __init__.py  post.py
backend/app/services/: data_service.py  ranking.py
backend/data/: sample_data.json
backend/tests/: test_posts.py
frontend/: .gitignore  GOOGLE_MAPS_SETUP.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  Firebase.js  index.css
frontend/src/components/: AuthForm.css  (+13 more)
ingestor/: .gitignore  README.md  simple_gemini_test.py  test_full_pipeline.py  test_gemini_extraction.py  test_google_cse.py
ingestor/data_ingestor/: main.py  pubsub_publisher.py  requirements.txt  test_sources.py
ingestor/extraction_worker/: main.py  requirements.txt
(+6 files in other folders)
