[project]
name = "agentic-ai-day"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "flask-session>=0.8.0",
    "langchain-core>=0.3.72",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.4",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0", 
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "geopy>=2.3.0",
    "pillow>=9.0.0",
    "google-cloud-firestore>=2.11.0",
    "firebase-admin>=6.2.0",
    "google-cloud-storage>=2.10.0",
]
